# loc_eval

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  package.xml
config/: amcl.yaml  loc_eval_2d.lua  loc_eval_2d_localization.lua  mrpt_pf.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
launch/: als_ros2.launch.py  amcl.launch.py  cartographer.launch.py  cartographer_mapping.launch.py  gazebo_gt.launch.py  mrpt.launch.py  slam_toolbox.launch.py  slam_toolbox_mapping.launch.py
maps/: turtlebot3_world.pbstream  turtlebot3_world_stb.data  turtlebot3_world_stb.posegraph
models/turtlebot3_burger_gt/: model.config  model.sdf
results/phaseC/: summary.csv
scripts/: eval_evo.sh  record_run.sh  run_all.sh  run_method.sh  traj_logger.py
